[tool.poetry]
name = "test-agent"
version = "0.1.0"
description = "testing agent capabilities for finding leads"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
firecrawl = "^1.15.0"
anthropic = "^0.49.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
